<resources>
    <string name="app_name">Eli Video Player</string>
    <string name="label_video_of" translatable="false"> of&#160;</string>
    <string name="label_videos" translatable="false">Video :&#160;</string>
    <string name="label_video_1_of" translatable="false">Video : 1 of&#160;</string>
    <string name="message_not_video_added_favorite" translatable="false">No video has been added to your Favorite list!</string>
    <string name="message_video_unknown_error" translatable="false">Unknown error occurred!</string>
    <string name="message_not_video_selected" translatable="false">No video selected for play!</string>
    <string name="menu_select_videos" translatable="false">Select Videos</string>
    <string name="menu_favorite_list" translatable="false">Favorite List</string>
    <string name="menu_load_subtitle" translatable="false">Load Subtitle</string>
    <string name="menu_exit" translatable="false">Exit</string>
    <string name="about_ok_button" translatable="false">Ok</string>
    <string name="menu_select_from_stiorage" translatable="false">Select From Storage</string>
    <string name="about_description" translatable="false">Eli Video Player is an open source app that has the ability to display subtitles that has been developed by &lt;a href="https://github.com/haselmehri">Yadollah Haselmehri&lt;/a>.\nGet this source app from Github via the link below</string>
    <string name="about_github_link" translatable="false">&lt;a href="https://github.com/haselmehri/EliVideoPlayer">Github&lt;/a></string>
</resources>
